--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="ahmed, mohamed cherif, développeur web, web developer">
     <meta name="description" content="My portfolio page"> <!-- description-->
   <meta name="robots" content="index, follow"> <!--meta robots-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,12 +45,12 @@
               <i class="fab fa-github"></i>Github</a>
             <a class="btn btn-link" href="https://www.linkedin.com/in/ahmed-mohamed-cherif-a6119a1a2/" target="blank">
               <i class="fab fa-linkedin"></i>Linkedin</a>
-          <a href="mon_curriculum_vitae.pdf" download="cv_Mohamed_Cherif_AHMED" >
+          <a href="mon_curriculum_vitae.pdf" download="cv_Mohamed_Cherif_AHMED" aria-label="télecharger" >
             <i class="far fa-paper-plane">Télecharger mon cv</i>
           </a>
             <hr class="my-4">
             <figure class="figure">
-              <img src="./new-pic.jpg" class="figure-img img-fluid rounded" alt="ma-photo">
+              <img src="./new-pic.jpg" class="figure-img img-fluid rounded" width="auto" alt="ma-photo">
               <figcaption class="figure-caption text-right"></figcaption>
             </figure>
             <p class="text-white">Ma réussite professionnelle étant mon objectif principal, je souhaite approfondir mes connaissances théoriques et les mettre en pratique au sein d'une entreprise.<br>
@@ -64,7 +65,7 @@
             </div>
            
           </div>
-          <button id="scrollToTop" >
+          <button id="scrollToTop" aria-label="scroll" >
             <i class="far fa-arrow-alt-circle-up"></i>
           </button>
           <section id="Skills">
@@ -163,9 +164,9 @@
           <div class="card-deck">
 
             <div class="card">
-              <img src="./mon-cv.PNG" class="card-img-top" alt="CV">
+              <img src="./mon-cv.PNG" class="card-img-top" width="auto" alt="CV">
               <div class="card-body">
-                <h5 class="card-title text-success">CV</h5>
+                <h4 class="card-title text-success">CV</h4>
                 <p class="card-text">Transformez une maquette en site web.</p>
                 <p class="card-text"><small class="text-muted">
               <a href="https://github.com/Ahmed7511/mon-cv" class="card-link" target="blank">code source</a>
@@ -174,9 +175,9 @@
               </div>
             </div>
             <div class="card">
-              <img src="./menu.PNG" class="card-img-top" alt="Menu-Restaurant">
+              <img src="./menu.PNG" class="card-img-top" width="auto" alt="Menu-Restaurant">
               <div class="card-body">
-                <h5 class="card-title text-warning">Oh My Food</h5>
+                <h4 class="card-title text-warning">Oh My Food</h4>
                 <p class="card-text">Dynamisez une page web avec des animations CSS.</p>
                 <p class="card-text"><small class="text-muted">
                   
@@ -186,9 +187,9 @@
               </div>
             </div>
             <div class="card">
-              <img src="./la-chouette.jpg" class="card-img-top" alt="la-chouette">
+              <img src="./la-chouette.jpg" class="card-img-top" width="auto" alt="la-chouette">
               <div class="card-body">
-                <h5 class="card-title text-danger">La Chouette</h5>
+                <h4 class="card-title text-danger">La Chouette</h4>
                 <p class="card-text">Optimisez un site web existant.</p>
                 <p class="card-text"><small class="text-muted">
               <a href="https://ahmed7511.github.io/p4-origine/" class="card-link" target="blank">page web Initial</a>
