--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
               <img src="./new-pic.jpg" class="figure-img img-fluid rounded" width="auto" alt="ma-photo">
               <figcaption class="figure-caption text-right"></figcaption>
             </figure>
-            <p class="text-white">Having recently graduated from a BAC + 2 (Web Developer and Integrator).
-              My professional success being my main objective, I want to deepen my theoretical knowledge and put it into practice within a company.
+            <p class="text-white">recently graduated from a BAC + 2 (Web Developer and Integrator).<br>
+              This training confirmed my appetite for web development and my goals are now to improve my skills and work in the field.<br>
+              So I want to deepen my theoretical knowledge and put it into practice within a company.
             </p>
             <a id="more" role="button" data-toggle="collapse" data-target="#content" aria-expanded="false" aria-controls="content" style="color: blue;" >...see more</a>                       
             <div class="collapse" id="content" >
               <h2 class="card-title text-warning text-uppercase" >Soft Skills </h2>
               <p class="text-white">
-                Critical mind, Boldness, Self-taught,
-                                Cooperation, Adaptability, calm, Honesty</p>
+                Critical mind, Boldness, Self-taught, Cooperation, Adaptability, calm, Honesty</p>
 
             </div>
            
@@ -290,18 +290,18 @@
                   </div>
 
                   <div class="col-md-6">
-                      <div class="row center-xs">
-                        <div class="texteContact col-sm-6">
+                      <div class="row">
+                        <div class="col-sm-6">
                           <i class="fas fa-envelope"></i><strong>Email :  <a href="mailto:Ahmed.mohamedcherifpro@gmail.com">Ahmed.mohamedcherifpro@gmail.com</a> </strong>
                         </div>
                     </div>
-                          <div class="texteContact col-sm-6">
+                          <div class="col-sm-6">
                               <i class="fa fa-mobile"></i> <strong>Phone number : </strong><br>
                                   07 68 07 12 89
                           </div>
                       <div class="row center-xs">
                          
-                      <div class="texteContact col-sm-6">
+                      <div class="col-sm-6">
                         <i class="fa fa-map-marker"></i>
                             <strong>Adress :</strong><br>
                             Paris, FRANCE<br> 
