--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">Mohamed Cherif Ahmed</a>
+            <span class="navbar-brand">Mohamed Cherif Ahmed</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -50,7 +50,7 @@
           </a>
             <hr class="my-4">
             <figure class="figure">
-              <img src="./new-pic.jpg" class="figure-img img-fluid rounded" width="auto" alt="ma-photo">
+              <img src="./new-pic.jpg" class="figure-img img-fluid rounded" alt="ma-photo">
               <figcaption class="figure-caption text-right"></figcaption>
             </figure>
             <p class="text-white">recently graduated from a BAC + 2 (Web Developer and Integrator).<br>
@@ -62,7 +62,7 @@
               <!------------------------------------------------------ soft skills on click -------------------------------------------------------------->
               <h2 class="card-title text-danger text-uppercase" >Soft Skills </h2>
               <p class="text-white">
-                Critical mind, Boldness, Self-taught, Cooperation, Adaptability, calm, Honesty</p>
+                Critical mind, Boldness, rigor, Self-taught, Cooperation, Adaptability, calm, Honesty</p>
 
             </div>
            
@@ -172,6 +172,16 @@
                       </div>
                     </div>
                     <div class="skill my-4">
+                      <b class="text-white h6">PHP (in progress)</b>
+                      <div class="progress">
+                        <div
+                          class="progress-bar bg-success"
+                          role="progressbar"
+                          data-progress="35%"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="skill my-4">
                       <b class="text-white h6">WordPress (in progress)</b>
                       <div class="progress">
                         <div
@@ -181,16 +191,8 @@
                         ></div>
                       </div>
                     </div>
-                    <div class="skill my-4">
-                      <b class="text-white h6">PHP (in progress)</b>
-                      <div class="progress">
-                        <div
-                          class="progress-bar bg-success"
-                          role="progressbar"
-                          data-progress="10%"
-                        ></div>
-                      </div>
-                    </div>
+                  </div>
+                  </div>
                   </div>
           </section>
           <!------------------------------------------- projects section ---------------------------------------------------->
@@ -199,8 +201,8 @@
 
           <div class="card-deck">
 
-            <div class="card">
-              <img src="./mon-cv.PNG" class="card-img-top" width="auto" alt="CV">
+            <div class="card card-projects">
+              <img src="./mon-cv.PNG" class="card-img-top" alt="CV">
               <div class="card-body">
                 <h4 class="card-title text-danger">CV</h4>
                 <p class="card-text text-white">Turn a mockup into a website.</p>
@@ -211,8 +213,8 @@
                 </small></p>
               </div>
             </div>
-            <div class="card">
-              <img src="./menu.PNG" class="card-img-top" width="auto" alt="Menu-Restaurant">
+            <div class="card card-projects">
+              <img src="./menu.PNG" class="card-img-top"  alt="Menu-Restaurant">
               <div class="card-body">
                 <h4 class="card-title text-danger">Oh My Food</h4>
                 <p class="card-text text-white">Energize a web page with CSS animations.</p>
@@ -225,8 +227,8 @@
               </div>
             </div>
             
-            <div class="card">
-              <img src="./la-chouette.jpg" class="card-img-top" width="auto" alt="la-chouette">
+            <div class="card card-projects">
+              <img src="./la-chouette.jpg" class="card-img-top"  alt="la-chouette">
               <div class="card-body">
                 <h4 class="card-title text-danger">La Chouette</h4>
                 <p class="card-text text-white">Optimize an existing website.</p>
@@ -240,8 +242,8 @@
             </div>
           </div>
         <div class="card-deck mt-3">
-          <div class="card">
-            <img src="./Orinico.PNG" class="card-img-top" width="auto" alt="Orinico">
+          <div class="card card-projects">
+            <img src="./Orinico.PNG" class="card-img-top"  alt="Orinico">
             <div class="card-body">
               <h4 class="card-title text-danger">Orinico</h4>
               <p class="card-text text-white">Build an e-commerce web site.</p>
@@ -251,8 +253,8 @@
            </small></p>
             </div>
           </div>
-          <div class="card">
-            <img src="./Sauce.jpg" class="card-img-top" width="auto" alt="la-chouette">
+          <div class="card card-projects">
+            <img src="./Sauce.jpg" class="card-img-top"  alt="la-chouette">
             <div class="card-body">
               <h4 class="card-title text-danger">So pekocko</h4>
               <p class="card-text text-white">Build a secure API for a food review app.</p>
@@ -262,8 +264,8 @@
            </small></p>
             </div>
           </div>
-          <div class="card">
-            <img src="./Groupomania.jpg" class="card-img-top" width="auto" alt="la-chouette">
+          <div class="card card-projects">
+            <img src="./Groupomania.jpg" class="card-img-top"  alt="la-chouette">
             <div class="card-body">
               <h4 class="card-title text-danger">Groupomania</h4>
               <p class="card-text text-white">
