--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <link rel="stylesheet" href="./style.css">
     <title>Ahmed Mohamed cherif | portfolio</title>
 </head>
-<body>
+<body class="bg-secondary">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <span class="navbar-brand">Mohamed Cherif Ahmed</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,9 +35,9 @@
           </div>
           </nav>
 
-    <div class="container-fluid bg-secondary">
-      <!--------------------------------------------------- jumbotron section  -------------------------------------------------->
-        <div class="jumbotron bg-dark">
+    <div class="container-fluid  mt-3">
+       
+      <div class="jumbotron bg-dark ">
             <h1 class="display-4 text-white">
               Web Developer and Integrator
             </h1>
@@ -45,7 +45,7 @@
               <i class="fab fa-github"></i>Github</a>
             <a class="btn btn-link bg-black" href="https://www.linkedin.com/in/ahmed-mohamed-cherif-a6119a1a2/" target="blank">
               <i class="fab fa-linkedin"></i>Linkedin</a>
-          <a href="mon_curriculum_vitae.pdf" download="cv_Mohamed_Cherif_AHMED" aria-label="télecharger" >
+          <a role="button" class="text-white" href="mon_curriculum_vitae.pdf" download="cv_Mohamed_Cherif_AHMED" aria-label="télecharger" >
             <i class="far fa-paper-plane">download my cv</i>
           </a>
             <hr class="my-4">
@@ -55,10 +55,11 @@
             </figure>
             <p class="text-white">recently graduated from a BAC + 2 (Web Developer and Integrator).<br>
               This training confirmed my appetite for web development and my goals are now to improve my skills and work in the field.<br>
-              So I want to deepen my theoretical knowledge and put it into practice within a company.
-            </p>
-            <a id="more" role="button" data-toggle="collapse" data-target="#content" aria-expanded="false" aria-controls="content" style="color: blue;" >...see more</a>                       
+              So I want to deepen my theoretical knowledge and put it into practice within a company.<br>
+            <a id="more" role="button" data-toggle="collapse" data-target="#content" aria-expanded="false" aria-controls="content" >...see more</a>                       
             <div class="collapse" id="content" >
+            </p>
+
               <!------------------------------------------------------ soft skills on click -------------------------------------------------------------->
               <h2 class="card-title text-danger text-uppercase" >Soft Skills </h2>
               <p class="text-white">
