--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <html xmlns:og="http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="ahmed-mohamedcherif, développeur web, web developer">
     <meta name="description" content="My portfolio page"> <!-- description-->
+    <meta proprety="og:title" content="Ahmed Mohamed cherif">
+    <meta proprety="og:description" content="My portfolio page">
   <meta name="robots" content="index, follow"> <!--meta robots-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
