--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
                       </div>
                     </div>
                     <div class="skill my-4">
-                      <b class="text-white h6">PHP (in progress)</b>
+                      <b class="text-white h6">PHP</b>
                       <div class="progress">
                         <div
                           class="progress-bar bg-success"
                           role="progressbar"
-                          data-progress="35%"
+                          data-progress="55%"
                         ></div>
                       </div>
                     </div>
