--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
        
       <div class="jumbotron bg-dark ">
             <h1 class="display-4 text-white">
-              Web Developer and Integrator
+              Web application Developer
             </h1>
             <a role="button" class="btn btn-link " href="https://github.com/Ahmed7511" target="blank">
               <i class="fab fa-github"></i>Github</a>
             <a class="btn btn-link bg-black" href="https://www.linkedin.com/in/ahmed-mohamed-cherif-a6119a1a2/" target="blank">
               <i class="fab fa-linkedin"></i>Linkedin</a>
-          <a role="button" class="text-white" href="mon_curriculum_vitae.pdf" download="cv_Mohamed_Cherif_AHMED" aria-label="télecharger" >
+          <a role="button" class="text-white" href="cv_Ahmed_mohamed_cherif.pdf" download="cv_Mohamed_Cherif_AHMED" aria-label="télecharger" >
             <i class="far fa-paper-plane">download my cv</i>
           </a>
             <hr class="my-4">
@@ -56,7 +56,8 @@
               <img src="./new-pic.jpg" class="figure-img img-fluid rounded" alt="ma-photo">
               <figcaption class="figure-caption text-right"></figcaption>
             </figure>
-            <p class="text-white">recently graduated from a BAC + 2 (Web Developer and Integrator).<br>
+            <p class="text-white">    
+              student in bachlor (bac+ 3) at webitech paris after having finished my bac + 2 as Web Developer and Integrator<br>
               This training confirmed my appetite for web development and my goals are now to improve my skills and work in the field.<br>
               So I want to deepen my theoretical knowledge and put it into practice within a company.<br>
             <a id="more" role="button" data-toggle="collapse" data-target="#content" aria-expanded="false" aria-controls="content" >...see more</a>                       
@@ -186,7 +187,17 @@
                       </div>
                     </div>
                     <div class="skill my-4">
-                      <b class="text-white h6">WordPress (in progress)</b>
+                      <b class="text-white h6">POO</b>
+                      <div class="progress">
+                        <div
+                          class="progress-bar bg-success"
+                          role="progressbar"
+                          data-progress="5O%"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="skill my-4">
+                      <b class="text-white h6">JAVA (in progress)</b>
                       <div class="progress">
                         <div
                           class="progress-bar bg-success"
