--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div
                           class="progress-bar bg-success"
                           role="progressbar"
-                          data-progress="5O%"
+                          data-progress="50%"
                         ></div>
                       </div>
                     </div>
