--- a/index.html
+++ b/index.html
@@ -197,6 +197,16 @@
                       </div>
                     </div>
                     <div class="skill my-4">
+                      <b class="text-white h6">Laravel</b>
+                      <div class="progress">
+                        <div
+                          class="progress-bar bg-success"
+                          role="progressbar"
+                          data-progress="55%"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="skill my-4">
                       <b class="text-white h6">JAVA (in progress)</b>
                       <div class="progress">
                         <div
@@ -204,15 +214,13 @@
                           role="progressbar"
                           data-progress="20%"
                         ></div>
-                      </div>
-                    </div>
                   </div>
                   </div>
                   </div>
           </section>
           <!------------------------------------------- projects section ---------------------------------------------------->
           <section id="projets">
-          <h3 class="card-title text-danger text-uppercase bg-dark text-center mt-5 py-2 ">My Openclassrooms Projects</h3>
+          <h3 class="card-title text-danger text-uppercase bg-dark text-center mt-5 py-2 ">My Projects</h3>
 
           <div class="card-deck">
 
@@ -256,7 +264,7 @@
               </div>
             </div>
           </div>
-        <div class="card-deck mt-3">
+        <div class="card-deck mt-4">
           <div class="card card-projects">
             <img src="./Orinico.PNG" class="card-img-top"  alt="Orinico">
             <div class="card-body">
@@ -280,7 +288,7 @@
             </div>
           </div>
           <div class="card card-projects">
-            <img src="./Groupomania.jpg" class="card-img-top"  alt="la-chouette">
+            <img src="./Groupomania.jpg" class="card-img-top"  alt="Groupomania">
             <div class="card-body">
               <h4 class="card-title text-danger">Groupomania</h4>
               <p class="card-text text-white">
@@ -291,7 +299,21 @@
            </small></p>
             </div>
           </div>
+        <div class="card card-projects">
+          <img src="./Messagerie.jpg" class="card-img-top"  alt="Messagerie">
+          <div class="card-body">
+            <h4 class="card-title text-danger">Messagerie</h4>
+            <p class="card-text text-white">
+              instant messaging.</p>
+              <small class="text-white"> Mysql, Php</small>
+            <p class="card-text"><small class="text-muted">
+            <a href="https://github.com/Ahmed7511/Messagerie" class="card-link" target="blank">Source code</a>
+         </small></p>
+          </div>
         </div>
+      </div>
+
+      </div>
         </section>
           <!--------------------------- section contact ------------------------------->
         <section id="contact">
