--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="ahmed-mohamedcherif, développeur web, web developer">
-    <meta name="description" content="My portfolio page"> <!-- description-->
+    <meta name="description" content="portfolio"> <!-- description-->
     <meta proprety="og:title" content="Ahmed Mohamed cherif">
-    <meta proprety="og:description" content="My portfolio page">
+    <meta proprety="og:description" content="portfolio page">
   <meta name="robots" content="index, follow"> <!--meta robots-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -207,12 +207,12 @@
                       </div>
                     </div>
                     <div class="skill my-4">
-                      <b class="text-white h6">JAVA (in progress)</b>
+                      <b class="text-white h6">JAVA (Spring Boot)</b>
                       <div class="progress">
                         <div
                           class="progress-bar bg-success"
                           role="progressbar"
-                          data-progress="20%"
+                          data-progress="40%"
                         ></div>
                   </div>
                   </div>
