--- a/index.html
+++ b/index.html
@@ -311,8 +311,20 @@
          </small></p>
           </div>
         </div>
+        <div class="card card-projects">
+          <img src="./SnakeGame.PNG" class="card-img-top"  alt="SnakeGame">
+          <div class="card-body">
+            <h4 class="card-title text-danger">SnakeGame</h4>
+            <p class="card-text text-white">
+              jeu de serpent.</p>
+              <small class="text-white"> Mysql, Php Laravel, JavaScript </small>
+            <p class="card-text"><small class="text-muted">
+            <a href="https://github.com/Ahmed7511/SnakeGame" class="card-link" target="blank">Le code source</a>
+         </small></p>
+          </div>
+        </div>
       </div>
-
+      
       </div>
         </section>
           <!--------------------------- section contact ------------------------------->
