--- a/index.html
+++ b/index.html
@@ -263,12 +263,24 @@
           
           <div class="col-lg-5 mr-lg-5 col-12">
             <div class="google-map w-100">
-              <iframe title="location" class="img-fluid" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.75769374045!2d2.2770196569436507!3d48.85895068149207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis!5e0!3m2!1sfr!2sfr!4v1604649749001!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>                           
+              <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+                <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
+                    var setting = {"height":531,"width":792,"zoom":9,"queryString":"Lisbonne, Portugal","place_id":"ChIJO_PkYRozGQ0R0DaQ5L3rAAQ","satellite":false,"centerCoord":[36.23383876002344,-18.826979584819213],"cid":"0x400ebbde49036d0","lang":"fr","id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"895041"};
+                    var d = document;
+                    var s = d.createElement('script');
+                    s.src = 'https://1map.com/js/script-for-user.js?embed_id=895041';
+                    s.async = true;
+                    s.onload = function (e) {
+                      window.OneMap.initMap(setting)
+                    };
+                    var to = d.getElementsByTagName('script')[0];
+                    to.parentNode.insertBefore(s, to);
+                  })();</script><a href="https://1map.com/fr/map-embed">1 Map</a></div>
             </div>
 
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                 <div class="contact-info-item">
-                 <p><i class="uil uil-mobile-android-alt"><a class="footer-text mb-0">0768 07 12 89</a></i>
+                 <!-- <p><i class="uil uil-mobile-android-alt"><a class="footer-text mb-0">0768 07 12 89</a></i> -->
                 </p>
                 <p><i class="uil uil-envelope-edit"><a href="mailto:hello@company.co"> ahmed.mohamedcherifpro@gmail.com</a></i>
                 </p>
