add phone number

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                 <div class="contact-info-item">
-                 <!-- <p><i class="uil uil-mobile-android-alt"><a class="footer-text mb-0">0768 07 12 89</a></i> -->
+                 <p><i class="uil uil-mobile-android-alt"><a class="footer-text mb-0">00351 92 301 37 93</a></i>
                 </p>
                 <p><i class="uil uil-envelope-edit"><a href="mailto:hello@company.co"> ahmed.mohamedcherifpro@gmail.com</a></i>
                 </p>
