--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <div class="contact-info-item">
                  <p><i class="uil uil-mobile-android-alt"><a class="footer-text mb-0">00351 92 301 37 93</a></i>
                 </p>
-                <p><i class="uil uil-envelope-edit"><a href="mailto:hello@company.co"> ahmed.mohamedcherifpro@gmail.com</a></i>
+                <p><i class="uil uil-envelope-edit"><a href="mailto:ahmed.mohamedcherifpro@gmail.com"> ahmed.mohamedcherifpro@gmail.com</a></i>
                 </p>
                 </div>
 
